syntax = "proto3";

package auth;

option go_package = "yom.sso.v1;ssov1";

service Auth{
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginReguest);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginReguest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string token = 1;
}